--- a/package.json
+++ b/package.json
@@ -3,9 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.4.0",
+    "@material-ui/icons": "^3.0.1",
+    "axios": "^0.18.0",
+    "connected-react-router": "^5.0.1",
+    "history": "^4.7.2",
+    "http-proxy-middleware": "^0.19.0",
+    "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.1.1"
+    "react-flexbox-grid": "^2.1.2",
+    "react-redux": "^5.1.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
+    "react-select": "^2.1.1",
+    "redux": "^4.0.1",
+    "redux-form": "^7.4.2",
+    "redux-saga": "^0.16.2"
   },
   "scripts": {
     "start": "react-scripts start",
