simple form with s3 uploader

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aybiz-web",
+  "name": "react-app",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://prakharsingh.github.io/react-app/",
