--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "API_URL=http://prakhar-singh.us-east-2.elasticbeanstalk.com/ react-scripts build",
+    "build": "API_URL=http://prakhar-singh.us-east-2.elasticbeanstalk.com react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
