fixed mixed-header issue

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_API_URL='http://production.u36msqhyut.us-east-1.elasticbeanstalk.com'
+REACT_APP_API_URL='https://cors-anywhere.herokuapp.com/http://production.u36msqhyut.us-east-1.elasticbeanstalk.com'
